FIX: CSS tweaks for when the TopInpageNavLeft collapses especially when refine search plugin is on [t28377]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@17371 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -293,7 +293,7 @@ div#CentralSpaceContainer.SlimHeaderFixedPosition { margin-top: 100px; }
 .TopInpageNav {clear: left;margin-bottom:20px;margin-right: 0;position:relative;}
 .BottomInpageNav {clear: left;padding-top: 5px;margin: 20px 15px 20px 0; position:relative;}
 .BottomInpageKey {margin-right: 15px; clear: left; text-align: left;}
-.TopInpageNavLeft{float:left;padding-right:120px;}
+.TopInpageNavLeft{float:left;}
 .TopInpageNavRight{position:absolute;right:0;top:3px;width:max-content;text-align:right;}
 .InpageNavLeftBlock {display:inline-block; *display: inline; *zoom: 1;text-align:left;margin: 0 20px 0 0;}
 .InpageNavRightBlock {display:inline-block; *display: inline; *zoom: 1;text-align:left;margin: 0 15px 0 0;}
